--- a/W1050_Mvc5/Resource/MyResource.en.resx
+++ b/W1050_Mvc5/Resource/MyResource.en.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AreaCodeRequired" xml:space="preserve">
+    <value>Area code is required</value>
+  </data>
   <data name="HelloWorld" xml:space="preserve">
     <value>Hello World</value>
   </data>
